added a new paragraph

--- a/wmd.html
+++ b/wmd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <Head>
-<title><b> WELCOME TO JAVA </b></title>
+<title><b> WELCOME TO JAVA AOBAKWE</b></title>
 </Head>
 <body>
 
