commit all changes

--- a/wmd.html
+++ b/wmd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <Head>
-<title><b> WELCOME TO JAVA AOBAKWE</b></title>
+<title><b> WELCOME TO JAVA </b></title>
 </Head>
 <body>
 
@@ -15,6 +15,12 @@
  language for digital devices such as set-top boxes, televisions, 
  etc. However, it was best suited for internet programming.Later,
  Java technology was incorporated by Netscape.</p>
+ <p1>This was created by Aobakwe</p>
+
+</body>
+
+</html>
+
  
  
   
