corrected the navigation bar

--- a/Press Release.html
+++ b/Press Release.html
@@ -81,7 +81,7 @@
     
     .caption {
       display: inline-block;
-      width: 17.66%;
+      width: 15%;
       color: #0c59cf;
       font-size: 18px;
       text-align: center;
@@ -106,6 +106,7 @@
     <h1>Warner Bros. Press Releases</h1>
   </header>
   <div class="caption-container">
+    <span class="caption"><a href="index.html">HOME</a></span>
     <span class="caption"><a href="movies.html">Movies</a></span>
     <span class="caption"><a href="games and apps.html">Games And Apps</a></span>
     <span class="caption"><a href="branding.html">Branding</a></span>
